# indico-plugins-contrib

./: hatch_build.py  manage-i18n.sh  ruff.toml  run-tests.sh  tsconfig.json
.github/utils/: check_version.py  get_core_repo.py
.github/workflows/: build.yml  ci.yml  pypi.yml
affiliation_extras/: README.md  pyproject.toml  pytest.ini
affiliation_extras/indico_affiliation_extras/: __init__.py  blueprint.py  controllers.py  placeholders.py  plugin.py  schemas.py  schemas_test.py  util.py  util_test.py
affiliation_extras/indico_affiliation_extras/client/: index.js
affiliation_extras/indico_affiliation_extras/client/components/: AffiliationTagGroupInput.module.scss  AffiliationTagGroupInput.tsx  ContactListField.tsx  EmailListField.jsx  ItemManager.module.scss  ItemManager.tsx  ItemManagerModal.tsx  ItemModal.tsx
affiliation_extras/indico_affiliation_extras/client/dashboard/: AffiliationDashboardActions.tsx  AffiliationRowActions.tsx  EmailAffiliations.module.scss  EmailAffiliations.tsx  GroupManager.tsx  TagManager.tsx  columns.module.scss  columns.tsx  filters.ts  formSection.tsx  types.ts
affiliation_extras/indico_affiliation_extras/migrations/: 20260123_1445_8e3c2c9a4b5f_create_affiliation_groups_and_tags.py  20260206_1623_7434e891c031_add_contact_emails.py
affiliation_extras/indico_affiliation_extras/models/: contacts.py  groups.py  tags.py
affiliation_extras/indico_affiliation_extras/templates/emails/: custom_email.html
affiliation_extras/indico_affiliation_extras/translations/: messages.pot
registration_prefill/: README.md  conftest.py  pyproject.toml  pytest.ini
registration_prefill/indico_registration_prefill/: __init__.py  forms.py  plugin.py  util.py
registration_prefill/tests/: conftest.py  util_test.py
