[project]
name = 'indico-plugin-affiliation-extras'
description = 'Affiliation groups, tags, and custom fields for Indico'
readme = 'README.md'
version = '3.3-dev'
license = 'MIT'
authors = [{ name = 'Duarte Galvão', email = 'duarte.galvao@unconventional.dev' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3.11']

[project.urls]
GitHub = 'https://github.com/indico/indico-plugins-contrib'

[project.entry-points.'indico.plugins']
affiliation_extras = 'indico_affiliation_extras.plugin:AffiliationExtrasPlugin'

[build-system]
requires = ['hatchling==1.29.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_affiliation_extras']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = '../hatch_build.py'
dependencies = ['babel==2.18.0']
